# FileDB

./: README.md  SqlParser.py  pyproject.toml
src/: FileParser.py  SqlParser.py  test.csv
