[tool.poetry]
name = "filedb"
version = "0.1.0"
description = "Allow you to manager your csv files with SQL"
authors = ["Brown Lu <Lug3Zz@github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sly = "^0.5"
networkx = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
